--- a/Content.Client/UserInterface/Systems/Hotbar/Widgets/HotbarGui.xaml
+++ b/Content.Client/UserInterface/Systems/Hotbar/Widgets/HotbarGui.xaml
@@ -9,6 +9,81 @@
     Orientation="Vertical"
     HorizontalAlignment="Center">
     <BoxContainer Orientation="Vertical">
+        </BoxContainer>
+        <BoxContainer Orientation="Vertical" Name="Hotbar" HorizontalAlignment="Center">
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar1"
+                SlotGroup="Hotbar1"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar2"
+                SlotGroup="Hotbar2"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar3"
+                SlotGroup="Hotbar3"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar4"
+                SlotGroup="Hotbar4"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+            <BoxContainer Name="GargoyleHandSpacer1"
+                      Access="Public"
+                      HorizontalAlignment="Center"
+                      HorizontalExpand="True"
+                      MinSize="32 32">
+            </BoxContainer>
+            <hands:HandsContainer
+                Name="HandContainer"
+                Access="Public"
+                HorizontalAlignment="Center"
+                HorizontalExpand="False"
+                ColumnLimit="6"/>
+            <BoxContainer Name="GargoyleHandSpacer2"
+                      Access="Public"
+                      HorizontalAlignment="Center"
+                      HorizontalExpand="True"
+                      MinSize="32 32">
+            </BoxContainer>
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar5"
+                SlotGroup="Hotbar5"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+            <inventory:ItemSlotButtonContainer
+                Name="Hotbar6"
+                SlotGroup="Hotbar6"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                VerticalExpand="False"
+                ExpandBackwards="True"
+                Columns="6"
+                HorizontalExpand="False"/>
+        </BoxContainer>
         <BoxContainer Name="SingleStorageContainer"
                       Access="Public"
                       HorizontalAlignment="Center"
@@ -34,43 +109,5 @@
                           VerticalAlignment="Bottom"
                           Margin="10">
             </BoxContainer>
-        </BoxContainer>
-        <BoxContainer Orientation="Horizontal" Name="Hotbar" HorizontalAlignment="Center">
-            <inventory:ItemSlotButtonContainer
-                Name="SecondHotbar"
-                SlotGroup="SecondHotbar"
-                VerticalAlignment="Bottom"
-                HorizontalAlignment="Right"
-                VerticalExpand="False"
-                ExpandBackwards="True"
-                Columns="6"
-                HorizontalExpand="False"/>
-            <inventory:ItemStatusPanel
-                Name="StatusPanelRight"
-                HorizontalAlignment="Center" Margin="0 0 -2 2"
-                SetWidth="125"
-                SetHeight="60"/>
-            <hands:HandsContainer
-                Name="HandContainer"
-                Access="Public"
-                HorizontalAlignment="Center"
-                HorizontalExpand="False"
-                ColumnLimit="6"/>
-            <inventory:ItemStatusPanel
-                Name="StatusPanelLeft"
-                HorizontalAlignment="Center" Margin="-2 0 0 2"
-                SetWidth="125"
-                SetHeight="60"/>
-            <inventory:ItemSlotButtonContainer
-                Name="MainHotbar"
-                SlotGroup="MainHotbar"
-                VerticalExpand="False"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
-                HorizontalExpand="False"
-                ExpandBackwards="True"
-                Columns="6"
-                />
-        </BoxContainer>
     </BoxContainer>
 </widgets:HotbarGui>
