--- a/Content.Client/Lobby/UI/LobbyGui.xaml
+++ b/Content.Client/Lobby/UI/LobbyGui.xaml
@@ -68,42 +68,44 @@
             <!-- Right Panel -->
             <PanelContainer Name="RightSide" Access="Public" StyleClasses="BackgroundPanel" HorizontalAlignment="Right" VerticalExpand="True"
                             VerticalAlignment="Stretch">
-                <BoxContainer Orientation="Vertical" HorizontalExpand="True">
-                    <!-- Top row -->
-                    <BoxContainer Orientation="Horizontal" MinSize="0 40" Name="HeaderContainer" Access="Public"
-                                  SeparationOverride="4">
-                        <Label Name="ServerName" Access="Public" StyleClasses="LabelHeadingBigger" VAlign="Center"
-                               HorizontalExpand="True" HorizontalAlignment="Center" />
+                <!-- <controls:ChatBackground> -->
+                    <BoxContainer Orientation="Vertical" HorizontalExpand="True">
+                        <!-- Top row -->
+                        <BoxContainer Orientation="Horizontal" MinSize="0 40" Name="HeaderContainer" Access="Public"
+                                    SeparationOverride="4">
+                            <Label Name="ServerName" Access="Public" StyleClasses="LabelHeadingBigger" VAlign="Center"
+                                HorizontalExpand="True" HorizontalAlignment="Center" />
+                        </BoxContainer>
+                        <!-- Gold line -->
+                        <controls:HLine StyleClasses="highlight" Thickness="2" />
+                        <controls:HSpacer Spacing="10" />
+                        <!-- Voting & misc button bar -->
+                        <BoxContainer Orientation="Horizontal" MinSize="0 40" HorizontalAlignment="Right">
+                            <Button Name="AHelpButton" Access="Public" Text="{Loc 'ui-lobby-ahelp-button'}"
+                                    StyleClasses="ButtonBig" />
+                            <vote:VoteCallMenuButton Name="CallVoteButton" StyleClasses="ButtonBig" />
+                            <Button Name="OptionsButton" Access="Public" StyleClasses="ButtonBig"
+                                    Text="{Loc 'ui-lobby-options-button'}" />
+                            <Button Name="LeaveButton" Access="Public" StyleClasses="ButtonBig"
+                                    Text="{Loc 'ui-lobby-leave-button'}" />
+                        </BoxContainer>
+                        <controls:HSpacer Spacing="10" />
+                        <!-- Server info -->
+                        <controls:NanoHeading Text="{Loc 'ui-lobby-server-info-block'}" />
+                        <info:ServerInfo Name="ServerInfo" Access="Public" MinSize="0 30" VerticalExpand="false"
+                                        Margin="3 3 3 3" MaxWidth="400" HorizontalAlignment="Left" />
+                        <Label Name="StationTime" Access="Public" FontColorOverride="{x:Static maths:Color.LightGray}"
+                            Margin="3 3 3 3" HorizontalAlignment="Left" />
+                        <controls:HSpacer Spacing="5" />
+                        <lobbyUi:LobbyCharacterPreviewPanel Name="CharacterPreview" Access="Public" />
+                        <controls:HSpacer Spacing="5" />
+                        <BoxContainer MinHeight="10" />
+                        <!-- Gold line -->
+                        <controls:HLine StyleClasses="highlight" Thickness="2" Access="Public" />
+                        <controls:HSpacer Spacing="10" />
+                        <widgets:ChatBox Name="Chat" Access="Public" VerticalExpand="True" Margin="3 3 3 3" MinHeight="50" />
                     </BoxContainer>
-                    <!-- Gold line -->
-                    <controls:HLine StyleClasses="highlight" Thickness="2" />
-                    <controls:HSpacer Spacing="10" />
-                    <!-- Voting & misc button bar -->
-                    <BoxContainer Orientation="Horizontal" MinSize="0 40" HorizontalAlignment="Right">
-                        <Button Name="AHelpButton" Access="Public" Text="{Loc 'ui-lobby-ahelp-button'}"
-                                StyleClasses="ButtonBig" />
-                        <vote:VoteCallMenuButton Name="CallVoteButton" StyleClasses="ButtonBig" />
-                        <Button Name="OptionsButton" Access="Public" StyleClasses="ButtonBig"
-                                Text="{Loc 'ui-lobby-options-button'}" />
-                        <Button Name="LeaveButton" Access="Public" StyleClasses="ButtonBig"
-                                Text="{Loc 'ui-lobby-leave-button'}" />
-                    </BoxContainer>
-                    <controls:HSpacer Spacing="10" />
-                    <!-- Server info -->
-                    <controls:NanoHeading Text="{Loc 'ui-lobby-server-info-block'}" />
-                    <info:ServerInfo Name="ServerInfo" Access="Public" MinSize="0 30" VerticalExpand="false"
-                                     Margin="3 3 3 3" MaxWidth="400" HorizontalAlignment="Left" />
-                    <Label Name="StationTime" Access="Public" FontColorOverride="{x:Static maths:Color.LightGray}"
-                           Margin="3 3 3 3" HorizontalAlignment="Left" />
-                    <controls:HSpacer Spacing="5" />
-                    <lobbyUi:LobbyCharacterPreviewPanel Name="CharacterPreview" Access="Public" />
-                    <controls:HSpacer Spacing="5" />
-                    <BoxContainer MinHeight="10" />
-                    <!-- Gold line -->
-                    <controls:HLine StyleClasses="highlight" Thickness="2" Access="Public" />
-                    <controls:HSpacer Spacing="10" />
-                    <widgets:ChatBox Name="Chat" Access="Public" VerticalExpand="True" Margin="3 3 3 3" MinHeight="50" />
-                </BoxContainer>
+                <!-- </controls:ChatBackground> -->
                 <TextureButton Name="CollapseButton"
                                 TexturePath="filled_right_arrow.svg.192dpi"
                                 HorizontalAlignment="Right"
